@@ -986,12 +986,43 @@ verilog/example.v:103: OPERATOR ';'
 verilog/example.v:104: unreadback '
    '
 verilog/example.v:104: KEYWORD 'end'
-verilog/example.v:106: unreadback '
+verilog/example.v:107: unreadback '
+
+   
+   '
+verilog/example.v:107: KEYWORD 'always'
+verilog/example.v:107: unreadback ' '
+verilog/example.v:107: OPERATOR '@'
+verilog/example.v:107: OPERATOR '*'
+verilog/example.v:107: unreadback ' '
+verilog/example.v:107: KEYWORD 'begin'
+verilog/example.v:108: unreadback '
+      '
+verilog/example.v:108: KEYWORD 'if'
+verilog/example.v:108: unreadback ' '
+verilog/example.v:108: OPERATOR '('
+verilog/example.v:108: SYMBOL 'i'
+verilog/example.v:108: OPERATOR '=='
+verilog/example.v:108: NUMBER '19'
+verilog/example.v:108: OPERATOR ')'
+verilog/example.v:108: unreadback ' '
+verilog/example.v:108: SYMBOL '$uwarn_clk'
+verilog/example.v:108: unreadback ' '
+verilog/example.v:108: OPERATOR '('
+verilog/example.v:108: SYMBOL 'clk'
+verilog/example.v:108: OPERATOR ','
+verilog/example.v:108: STRING '"Called at next edge (1 of 2)\n"'
+verilog/example.v:108: OPERATOR ')'
+verilog/example.v:108: OPERATOR ';'
+verilog/example.v:109: unreadback '
+   '
+verilog/example.v:109: KEYWORD 'end'
+verilog/example.v:111: unreadback '
 
 '
-verilog/example.v:106: KEYWORD 'endmodule'
-verilog/example.v:107: unreadback '
+verilog/example.v:111: KEYWORD 'endmodule'
+verilog/example.v:112: unreadback '
 '
-verilog/example.v:107: PREPROC '`line 107 "verilog/example.v" 2
+verilog/example.v:112: PREPROC '`line 112 "verilog/example.v" 2
 '
-verilog/example.v:107: ENDPARSE ''
+verilog/example.v:112: ENDPARSE ''
