@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***	Add Netlist net, port and module ->delete methods. [Daniel Schoch]
 
+***	Add vpm $uerror_clk and $uwarn_clk assertions.
+
 ***	Vpm now enables `line comments unless using Verilog 1995.
 
 * Verilog::Language 3.041 2008/09/03
